--- a/opt_step_by_step.ipynb
+++ b/opt_step_by_step.ipynb
@@ -453,7 +453,7 @@
    "metadata": {},
    "source": [
     "- 'prob_dm1': Probability of conversion when customers receive no coupon.\n",
-    "- 'prob_dm2': Probability of conversion when cusotmers receive 10 USD coupon.\n",
+    "- 'prob_dm2': Probability of conversion when customers receive 10 USD coupon.\n",
     "- 'prob_dm3': Probability of conversion when customers receive 20 USD coupon."
    ]
   },
