--- a/opt_step_by_step.ipynb
+++ b/opt_step_by_step.ipynb
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "id": "1b3add0b-ed8a-4976-9efb-1cd925ee82cf",
    "metadata": {},
    "outputs": [],
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "id": "a73b1cca-8a09-42a0-99e8-54368a499197",
    "metadata": {},
    "outputs": [],
@@ -655,18 +655,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "id": "7677c850-fbc4-461f-9012-5770fbacb9a1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a dictionary with values of coupon by DM type.\n",
-    "dict_dm_cost = {\"dm1\": 0, \"dm2\": 10, \"dm3\": 20}"
+    "# Create variables to hold exogenous variables.\n",
+    "dict_dm_cost = {\"dm1\": 0, \"dm2\": 10, \"dm3\": 20}\n",
+    "max_budget = 10000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "id": "33f38af1-630a-4380-b48f-79326636fc6b",
    "metadata": {},
    "outputs": [],
@@ -677,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "id": "13653b35-2388-4ea0-8cb7-6de7c5129c92",
    "metadata": {},
    "outputs": [],
@@ -693,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 54,
    "id": "3ce942a0-2af1-4050-a27f-92a7a6d621bc",
    "metadata": {},
    "outputs": [],
@@ -708,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
    "id": "93f84f18-7561-4b63-ad90-f5871aec79b8",
    "metadata": {},
    "outputs": [],
@@ -720,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 56,
    "id": "31268a81-0b8e-4b2e-b3e1-2ff7f6674807",
    "metadata": {},
    "outputs": [],
@@ -730,12 +731,12 @@
     "    x_sd[s, d] * dict_dm_cost.get(d, 0) \\\n",
     "    * dict_segment_dm_prob[s, d] * dict_segment_count[s]\n",
     "    for s in ls_segment_id\n",
-    "    for d in ls_dm_notdm1) <= 10000"
+    "    for d in ls_dm_notdm1) <= max_budget"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 57,
    "id": "0bacb0e0-9f43-4b3d-a781-6dd72207015b",
    "metadata": {},
    "outputs": [],
@@ -749,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 58,
    "id": "f4821c2d-93f4-4673-838f-fc5da7e1a87c",
    "metadata": {},
    "outputs": [
@@ -759,7 +760,7 @@
      "text": [
       "status: Optimal\n",
       "Obj Value: 326.1\n",
-      "Compute Time: 1.07(s)\n"
+      "Compute Time: 0.339(s)\n"
      ]
     }
    ],
@@ -775,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 59,
    "id": "092b7976-85f4-49fe-9ce3-fea5bd706635",
    "metadata": {},
    "outputs": [
@@ -1063,7 +1064,7 @@
        "15       200         160.0     20.000000     20.000000  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 60,
    "id": "f1f9952c-f23f-4174-9090-6558136a6ace",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 61,
    "id": "5654a51a-3d41-41f6-9f32-c8b400f807ba",
    "metadata": {},
    "outputs": [
